# Ruler

./: CMakeLists.txt  Map_.qml  Point.qml  main.qml  qml.qrc
res/: qml.qrc
